# phonetic_english_stenotype

./: .gitignore  MANIFEST.in  README.md  setup.cfg
Phonetic/: system.py
Phonetic/dictionaries/: jeff-phrasing.py  phonetic-brief.json  phonetic-user.json
Phonetix/: system.py
Phonetix/dictionaries/: phonetix-base.json  phonetix-brief.json  phonetix-commands.json  phonetix-phrasing.json  phonetix-preffix.json  phonetix-suffix.json  phonetix-user.json
phonetic/: system.py
phonetic/dictionaries/: phonetic-commands.json  phonetic-user.json
