[metadata]
name = Phonetic English Stenotype
version = 0.0.0
description = Phonetic stenography theory
long_description = file: README.md
long_description_content_type = text/markdown
author = JEEBIS27
author_email = jeebis.iox@gmail.com
license = GPL-3.0-or-later
url =https://github.com/JEEBIS27/phonetic_english_stenotype
project_urls =
	Source Code = https://github.com/JEEBIS27/phonetic_english_stenotype
	Issue Tracker = https://github.com/JEEBIS27/phonetic_english_stenotype/issues
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
        plover>=5.2.3
		plover-system-switcher
		plover-last-translation
   		plover-python-dictionary
packages =
	Phonetic
	Phonetic.dictionaries

[options.entry_points]
plover.system =
 Phonetic = phonetic.system

[options.exclude_package_data]
Phonetic = dictionaries/*
