[metadata]
name = Phonetix
version = 0.0.0
description = Phonetix
long_description = file: README.md
long_description_content_type = text/markdown
author = JEEBIS27
author_email = jeebis.iox@gmail.com
license = GPL-3.0-or-later
url =https://github.com/JEEBIS27/plover_phonetix
project_urls =
	Source Code = https://github.com/JEEBIS27/plover_phonetix
	Issue Tracker = https://github.com/JEEBIS27/plover_phonetix/issues
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
        plover>=5.2.3
		plover-system-switcher
		plover-last-translation
   		plover-python-dictionary
packages =
	Phonetix
	Phonetix.dictionaries

[options.entry_points]
plover.system =
 Phonetix = Phonetix.system

[options.exclude_package_data]
Phonetix = dictionaries/*
